welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: not found: value R
if(""==R) {Right()}
       ^BDRBuggle:5: error: not found: value L
if(""==L) {Left()}
       ^BDRBuggle:6: error: not found: value I
if(""==I) {Inverse()}
       ^BDRBuggle:6: error: not found: value Inverse
if(""==I) {Inverse()}
           ^BDRBuggle:7: error: not found: value A
if(""==A)  {avance()}
       ^BDRBuggle:8: error: not found: value B
if(""==B) {avance();avance()}
       ^BDRBuggle:9: error: not found: value C
if(""==C) {avance();avance();avance()}
       ^BDRBuggle:10: error: not found: value Z
if(""==Z) {recule()}
       ^BDRBuggle:11: error: not found: value Y
if(""==Y) {recule();recule()}
       ^BDRBuggle:12: error: not found: value X
if(""==X) {recule();recule();recule()}
       ^